Switch to Inter throughout, fix timeline dot alignment

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -12,7 +12,7 @@
       content: '';
       position: absolute;
       left: -2.22em;
-      top: 0.45em;
+      top: 0.35em;
       width: 10px;
       height: 10px;
       border-radius: 50%;
